# spectral-forecast

./: .gitignore  README.md  check_ar_orders.py  confidence_profile.py  debug_prepass.py  diagnose.py  diagnose_clamping.py  diagnose_ettm1_720.py  diagnose_win17.py  diagnose_windows.py  download_datasets.py  download_nixtla.py  engine_full_benchmark.py  engine_quick_benchmark.py  engine_quick_test.py  engine_v2_benchmark.py  pyproject.toml  quick_test.py  residual_diagnostic.py  run_ablation.py  run_all_benchmarks.py  run_benchmark.py  run_benchmark_ettm1.py  run_engine_benchmark.py  run_expanded_benchmarks.py  spectral_density.py  verify_baseline.py  zenodo_upload.py
paper/: paper.aux  paper.out  paper.tex
spectral_forecast/: __init__.py  benchmark.py  cli.py  engine.py  extraction.py  forecast.py  local.py  prepass.py  shock.py  trend.py  wavelet.py  workers_v2.py
spectral_forecast/models/: __init__.py  baseline.py  iterative.py  stochastic_resonance.py
tests/: test_engine.py  test_extraction.py  test_forecast.py  test_shock.py  test_trend.py  test_workers_v2.py
