[project]
name = "spectral-forecast"
version = "0.1.0"
description = "Three-layer analytical time series forecasting: Fourier extraction, trend fitting, shock adjustment"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
benchmark = []

[project.scripts]
spectral-forecast = "spectral_forecast.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
