[project]
name = "spectral-forecast"
version = "0.4.0"
description = "Adaptive multi-basis time series forecasting: Fourier + wavelet decomposition with entropy-guided basis selection"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "PyWavelets>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
spectral-forecast = "spectral_forecast.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
